# app/Http/Controllers/Controller.php
@@ -10,6 +10,16 @@ use Illuminate\Routing\Controller as BaseController;
      * @OA\Info(
      *    title="HealthCare",
      *    version="1.0.0",
+     *      description="Description removed for better illustration of structure.",
+     *      @OA\Contact(
+     *          email="admin@example.test",
+     *          name="company",
+     *          url="https://example.test"
+     *      ),
+     *      @OA\License(
+     *          name="Apache 2.0",
+     *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
+     *      )
      * )
      * @OA\SecurityScheme(
      *     type="http",
@@ -19,6 +29,7 @@ use Illuminate\Routing\Controller as BaseController;
      * )
 
     */
+
 class Controller extends BaseController
 {
     use AuthorizesRequests, ValidatesRequests;
